<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <Spinner
        android:id="@+id/tagType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp" />

    <EditText
        android:id="@+id/tagName"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/tag_name"
        android:autofillHints="no" />

    <EditText
        android:id="@+id/tagSeekBarMin"
        android:inputType="numberDecimal|numberSigned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/tag_seek_bar_minimum"
        android:visibility="gone"
        android:autofillHints="no" />

    <EditText
        android:id="@+id/tagSeekBarMax"
        android:inputType="numberDecimal|numberSigned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/tag_seek_bar_maximum"
        android:visibility="gone"
        android:autofillHints="no" />

    <EditText
        android:id="@+id/tagSeekBarStep"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/tag_seek_bar_step"
        android:visibility="gone"
        android:autofillHints="no" />

</LinearLayout>
