<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content" android:importantForAutofill="noExcludeDescendants"
        android:orientation="vertical">

        <EditText
            android:id="@+id/previewContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/input_hint_for_preview"
            android:text="@string/default_preview" />

        <EditText
            android:id="@+id/textSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/text_size" />

        <com.google.android.material.slider.Slider
            android:id="@+id/wght"
            android:paddingHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:valueFrom="0"
            android:valueTo="1000"
            android:value="400"
            android:stepSize="1"
            app:tickVisible="false" />

        <TextView
            android:id="@+id/preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_preview"
            android:textSize="20sp"
            android:fontVariationSettings="'wght' 400" />

    </LinearLayout>
</ScrollView>
